# vedix

./: .gitignore  README.md  gemini-extension.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.gemini/: INSTALL.md
commands/: ai-scientist-list.md  ai-scientist-meta.md  ai-scientist-output.md  ai-scientist-query.md  ai-scientist-resume.md  ai-scientist.md
docs/: AGENT_INSTALL_PROMPTS.md  INSTALL_CLAUDE_CODE.md
docs/launch/: habr-ru.md  hn-show-hn.md  vc-ru.md  x-twitter-thread.md  youtube-demo-script.md
docs/marketing/: 2026-05-20-vedix-marketing-brief.md
docs/plans/: 2026-04-25-ai-scientist-plugin-implementation.md  2026-04-27-orchestrator-rewrite-implementation.md  2026-04-28-v2.1-implementation-part2.md  2026-04-28-v2.1-implementation-part3.md  2026-04-28-v2.1-implementation-part4.md  2026-04-28-v2.1-implementation.md
plugins/vedix/saas/: pyproject.toml
plugins/vedix/saas/app/: main.py
plugins/vedix/saas/app/models/: yjs_doc.py
plugins/vedix/saas/app/routers/: mcp_proxy.py
plugins/vedix/saas/app/workers/: job_worker.py  mcp_pool.py  yjs_server.py
plugins/vedix/saas/tests/: conftest.py  test_job_worker.py  test_mcp_proxy.py  test_yjs_server.py
scripts/: _merge_codex_config.py  backfill_text_extracts.py  bootstrap.ps1  bootstrap.sh  install.ps1  migrate-from-skill.ps1  rollback.ps1  scrape_journals.py  scrape_oa.py  train_register_classifier_gpu.py  update.ps1  update.sh  verify.ps1
settings/: default-settings.json  settings.schema.json
tests/: test_static_checks.py  test_v3_version_consistency.py
(+243 files in other folders)
