[project]
name = "vedix-saas"
version = "3.0.0-block11"
description = "vedix.ai SaaS — FastAPI wrapper over the Vedix orchestrator with all-MCPs-free entitlements."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "arq>=0.26",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "alembic>=1.13",
    "prometheus-fastapi-instrumentator>=7.0",
    "sentry-sdk>=2.0",
    # Block 11: federated MemPalace + real-time collab
    "websockets>=12",
    "y-py>=0.6 ; platform_python_implementation == 'CPython'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "fakeredis>=2.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
